--- a/04_vogal.html
+++ b/04_vogal.html
@@ -3,6 +3,29 @@
     //PROBLEMA: Vogal - Construa um programa que leia um caractere e informe se este caractere é uma vogal.
 
     // ENTRADA
+    
+    const  caractere = prompt("insira um caractere").trim().toUpperCase()
+
+switch (caractere) {
+    case "A":
+        alert("A letra (A) é uma vogal");
+        break;
+    case "E":
+        alert("A letra (E) é uma vogal");
+        break;
+    case "I":
+        alert("A letra (I) é uma vogal");
+        break;
+    case "O":
+        alert("A letra (O) é uma vogal");
+        break;
+     case "U":
+        alert("A letra (U) é uma vogal");
+        break;
+    default:
+        alert("insira so (A), (E), (I), (O), (U).")
+        break;
+}
 
     
     // PROCESSAMENTO
